[package]
name = "block_bid_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0.11", features = ["ws"] }
ethers-primitive-types-rs = "0.12.1"
futures = "0.3.29"
tokio-stream = "0.1.14"
